--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "ak-boateng.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "bio-photo.jpg"
+  avatar           : "profile.png"
   name             : "Amesese Boateng"
   pronouns         : # example: "she/her"  
   bio              : "Data Science, ML Specialization"
