--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@
 
 main:
   - title: "CV"
-    url: https://docs.google.com/document/d/12M7GnTdJiwvMhvAt-uYAlhlnOInUNyHl0-AGcRvzkcU/edit?usp=sharing
+    url: https://drive.google.com/file/d/1j5e3tNYHx-Aw6ah3GF66oLl_sjMMmimu/view?usp=sharing
     
   - title: "Portfolio"
     url: /portfolio/
